<resources>
    <string name="app_author">Michael Beaton</string>
    <string name="app_name">[2021]Orbitals LWP &amp; Daydream</string>
    <string name="app_name_root">[2021]Orbitals</string>
    <string name="app_version_code">16</string>
    <string name="app_version">1.1.6</string>
    <string name="wallpaper_description">[2021]Orbitals LWP</string>
    <string name="wallpaper_settings">Orbitals Live Wallpaper</string>
    <string name="system_settings">System settings</string>
    <string name="service_title">[2021]Orbitals</string>
    <string-array name="launcher_array">
        <item>Live Wallpaper settings</item>
        <item>Daydream settings</item>
        <item>Start Daydream</item>
    </string-array>
    <string-array name="navigation_array">
        <item>Live Wallpaper settings</item>
        <item>Daydream settings</item>
    </string-array>
    <string name="launcher_list_title">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string-array name="dream_sections">
        <item>Daydream</item>
        <item>Appearance</item>
        <item>Visual Aids</item>
        <item>Systems</item>
        <item>Physics</item>
        <item>Time</item>
        <item>Notifications</item>
        <item>Performance</item>
        <item>Experiments</item>
    </string-array>
    <string-array name="lwp_sections">
        <item>Live Wallpaper</item>
        <item>Appearance</item>
        <item>Lock Screen</item>
        <item>Visual Aids</item>
        <item>Systems</item>
        <item>Physics</item>
        <item>Notifications</item>
        <item>Performance</item>
        <item>Experiments</item>
    </string-array>
    <string name="dream_description">Orbitals Dream</string>
    <string name="dream_settings">Orbitals Dream</string>
    <string name="dream_appearance">Appearance</string>
    <string name="pref_daydream_bright">Bright screen</string>
    <string name="pref_daydream_bright_summ">Prevent the screen from dimming after a few seconds of inactivity.</string>
    <string name="pref_daydream_interactive">Interactive</string>
    <string name="pref_daydream_interactive_summ">Respond to screen touches. If disabled, touching the screen exits the daydream.</string>
    <string name="pref_daydream_fullscreen">Immersive</string>
    <string name="pref_daydream_fullscreen_summ">Enable immersive mode to hide system bars. Requires Android 4.4 or higher.</string>
    <string name="pref_time_title">Time</string>
    <string name="pref_time_title_summ">Show the time.</string>
    <string name="pref_time_show_title">Show time</string>
    <string name="pref_time_show_summ">Display current time on top of daydream.</string>
    <string name="pref_time_24hr_title">24-hour format</string>
    <string name="pref_time_24hr_summ">e.g. Enabled = 15:31, Disabled = 3:31pm</string>
    <string name="pref_time_outline">Outline only</string>
    <string name="pref_time_outline_summ">Show text outline.</string>
    <string name="pref_time_color">Colour</string>
    <string name="pref_time_color_summ">Time text colour.</string>
    <string name="pref_time_size">Size</string>
    <string name="pref_time_size_summ">Time text size.</string>
    <string name="pref_title">Options</string>
    <string name="pref_performance_title">Performance</string>
    <string name="pref_performance_title_summ">Tweaks to keep the animation smooth.</string>
    <string name="pref_performance_title_daydream_summ">Tweaks for animation and interactivity.</string>
    <string name="pref_performance_maxobjects">Object limit</string>
    <string name="pref_performance_maxobjects_summ">Maximum number of objects to generate automatically. Touching the screen can still add more.</string>
    <string name="pref_performance_framerate_summ">Frames per second</string>
    <string name="pref_performance_framerate">Target frame rate.</string>
    <string name="pref_appearance_title">Appearance - Wallpaper</string>
    <string name="pref_appearance_title_summ">Colours and shapes.</string>
    <string name="pref_appearance_shapes_title">Object shapes</string>
    <string name="pref_render_title">Visual aids</string>
    <string name="pref_render_title_summ">Markers to help understand why things move as they do.</string>
    <string name="pref_render_accArrows">Acceleration arrows</string>
    <string name="pref_render_accArrows_summ">Visualises the changing acceleration of each object.</string>
    <string name="pref_render_trace">Dot trails</string>
    <string name="pref_render_trace_summ">Objects leave a trail of dots as they travel.</string>
    <string name="pref_render_dialog_trace_length">Dot trail length</string>
    <string name="pref_render_dialog_trace_length_summ">How long the dot trail for each object should be.</string>
    <string name="pref_render_outlines">Outlines</string>
    <string name="pref_render_outlines_summ">Show a thin outline around each object. Has no effect in wireframe mode.</string>
    <string name="pref_render_wireframe">Wireframe</string>
    <string name="pref_render_wireframe_summ">Only show the outline of each object.</string>
    <string name="pref_render_wireframewidth">Wireframe/Outline thickness</string>
    <string name="pref_render_wireframewidth_summ">How thick the lines should be.</string>
    <string name="pref_render_size">Size</string>
    <string name="pref_render_size_summ">Make objects bigger or smaller.</string>
    <string name="pref_color_title">Object colours</string>
    <string name="pref_color_colortheme">Hue</string>
    <string name="pref_color_colortheme_summ">Approximate colour of generated objects.</string>
    <string name="pref_color_background">Colour</string>
    <string name="pref_color_background_summ">Background colour.</string>
    <string name="pref_color_dark">Dark</string>
    <string name="pref_color_dark_summ">Generate darker colours for objects.</string>
    <string name="pref_color_desaturate">Desaturate</string>
    <string name="pref_color_desaturate_summ">Generate softer colours.</string>
    <string name="pref_color_alpha">Transparency</string>
    <string name="pref_color_alpha_summ">Choose the alpha value for object colours. Zero is invisible, 255 is fully opaque.</string>
    <string name="pref_lockscreen_title">Appearance - Lock screen</string>
    <string name="pref_lockscreen_title_summ">Choose a different look when your device is locked.</string>
    <string name="pref_lockscreen_wireframe">Wireframe</string>
    <string name="pref_lockscreen_wireframe_summ">Only show the outline of each object.</string>
    <string name="pref_lockscreen_wireframewidth">Wireframe/Outline thickness</string>
    <string name="pref_lockscreen_wireframewidth_summ">How thick the lines should be.</string>
    <string name="pref_lockscreen_alpha">Object transparency.</string>
    <string name="pref_lockscreen_alpha_summ">Choose the alpha value for object colours. Zero is invisible, 255 is fully opaque.</string>
    <string name="pref_lockscreen_dark">Dark</string>
    <string name="pref_lockscreen_dark_summ">Darker colours.</string>
    <string name="pref_lockscreen_desaturate">Desaturate</string>
    <string name="pref_lockscreen_desaturate_summ">Softer colours.</string>
    <string name="pref_lockscreen_color_colortheme">Objects</string>
    <string name="pref_lockscreen_color_colortheme_summ">Approximate colour of generated objects.</string>
    <string name="pref_lockscreen_color_background">Background</string>
    <string name="pref_lockscreen_color_background_summ">Background colour.</string>
    <string name="pref_lockscreen_size">Size</string>
    <string name="pref_lockscreen_size_summ">Make objects bigger or smaller.</string>
    <string name="pref_lockscreen_outlines">Outlines</string>
    <string name="pref_lockscreen_outlines_summ">Show a thin outline around each object in the background colour. Has no effect in wireframe mode.</string>
    <string name="pref_systems_title">System generation</string>
    <string name="pref_systems_title_summ">Which systems should appear automatically, and what should happen when you touch the screen.</string>
    <string name="pref_systems_cell">Cellular</string>
    <string name="pref_systems_cell_summ">Objects are arranged in a triangular mesh.</string>
    <string name="pref_systems_random">Random</string>
    <string name="pref_systems_random_summ">Objects are placed at random with random velocities.</string>
    <string name="pref_systems_star">Planetary</string>
    <string name="pref_systems_star_summ">A large object orbited by several smaller ones.</string>
    <string name="pref_systems_poly">Polygonal</string>
    <string name="pref_systems_poly_summ">Objects are arranged at points of a regular polygon and start orbiting the system centre.</string>
    <string name="pref_systems_streamer">Streamer</string>
    <string name="pref_systems_streamer_summ">Objects are ejected in one direction from a single point.</string>
    <string name="pref_systems_touch">Touch</string>
    <string name="pref_systems_touch_summ">Generate this system when the screen is touched.</string>
    <string name="pref_physics_title">Physics</string>
    <string name="pref_physics_title_summ">Collision and gravity tweaks.</string>
    <string name="pref_physics_gravity">Gravitational constant</string>
    <string name="pref_physics_gravity_summ">Gravity strength multiplier - default is 1.0.</string>
    <string name="pref_physics_antigravity">Antigravity</string>
    <string name="pref_physics_antigravity_summ">Fall upwards.</string>
    <string name="pref_physics_collision">Collision style</string>
    <string name="pref_physics_collision_summ">How objects should behave when colliding.</string>
    <string name="pref_notify_title">Notification pulse</string>
    <string name="pref_notify_summ">Change object colours when you have notifications.</string>
    <string name="pref_notify_pulse">Notification pulse</string>
    <string name="pref_notify_pulse_summ">Enable notification extension integration.</string>
    <string name="pref_notify_download">Download extension</string>
    <string name="pref_notify_download_summ">Notification pulse requires an extension to work. Click here see the extension on the Play Store.</string>
    <string name="pref_notify_speed">Pulse frequency</string>
    <string name="pref_notify_speed_summ">How quickly the colours should change.</string>
    <string name="pref_experimental_title">Experimental</string>
    <string name="pref_experimental_summ">May be buggy.</string>
    <string name="pref_experimental_centreofmass">Show centre of mass</string>
    <string name="pref_experimental_centreofmass_summ">Centre the display on the centre of mass.\n
        <li>- Why it\'s and experiment: Heavy, fast moving objects can send the viewpoint flying off in one direction which looks odd as objects continue to spawn.\n</li>
        <li>- Recommended use: Turn collisions off to minimise likelihood of getting heavy, fast moving objects.</li></string>
    <string name="pref_experimental_pixelate">Bitcrush</string>
    <string name="pref_experimental_pixelate_summ">Show objects as low fidelity approximations.\n
        <li>- Why it\'s an experiment: Needs optimising - performance falls off quickly with increasing object population.</li>\n
        <li>- Recommended use: Set a low frame rate (under Performance in the settings) - it adds to the rudimentary feel. Probably better in Daydream mode?</li></string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_title_summ"></string>
    <string name="pref_about_licensing">Licensing</string>
    <string name="pref_about_changelog">Change log</string>
<string name="pref_about_community">Google+ Community</string>
<string name="pref_about_community_summ">Share you favourite settings, request features, or see what\'s coming soon.</string>
</resources>