<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" >

    <PreferenceCategory android:title="@string/pref_title" >
        <!-- Appearance settings -->
        <PreferenceScreen
            android:summary="@string/pref_appearance_title_summ"
            android:title="@string/dream_appearance"
            android:fragment="com.beatonma.orbitalslivewallpaper.dream.preferences.AppearanceFragment"/>

        <!-- Visual Aids settings -->
        <PreferenceScreen
            android:summary="@string/pref_render_title_summ"
            android:title="@string/pref_render_title" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_render_accArrows"
                android:summary="@string/pref_render_accArrows_summ"
                android:title="@string/pref_render_accArrows" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_render_trace"
                android:summary="@string/pref_render_trace_summ"
                android:title="@string/pref_render_trace" />

            <com.beatonma.orbitalslivewallpaper.NumberDialogPreference
                android:dependency="pref_render_trace"
                android:key="pref_render_dialog_trace_length"
                android:summary="@string/pref_render_dialog_trace_length_summ"
                android:title="@string/pref_render_dialog_trace_length" />
        </PreferenceScreen>

        <!-- System generation -->
        <PreferenceScreen
            android:summary="@string/pref_systems_title_summ"
            android:title="@string/pref_systems_title" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_cell"
                android:summary="@string/pref_systems_cell_summ"
                android:title="@string/pref_systems_cell" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_star"
                android:summary="@string/pref_systems_star_summ"
                android:title="@string/pref_systems_star" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_poly"
                android:summary="@string/pref_systems_poly_summ"
                android:title="@string/pref_systems_poly" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_random"
                android:summary="@string/pref_systems_random_summ"
                android:title="@string/pref_systems_random" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_streamer"
                android:summary="@string/pref_systems_streamer_summ"
                android:title="@string/pref_systems_streamer" />

            <ListPreference
                android:defaultValue="3"
                android:entries="@array/pref_systems_touch_entries"
                android:entryValues="@array/pref_systems_touch_entryvalues"
                android:key="pref_systems_touch"
                android:summary="@string/pref_systems_touch_summ"
                android:title="@string/pref_systems_touch" />
        </PreferenceScreen>

        <!-- Physics settings -->
        <PreferenceScreen
            android:summary="@string/pref_physics_title_summ"
            android:title="@string/pref_physics_title" >
            <com.beatonma.orbitalslivewallpaper.NumberDialogPreference
                android:key="pref_physics_gravity"
                android:summary="@string/pref_physics_gravity_summ"
                android:title="@string/pref_physics_gravity" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_physics_antigravity"
                android:summary="@string/pref_physics_antigravity_summ"
                android:title="@string/pref_physics_antigravity" />

            <ListPreference
                android:defaultValue="1"
                android:entries="@array/pref_physics_collision_entries"
                android:entryValues="@array/pref_physics_collision_entryvalues"
                android:key="pref_physics_collision"
                android:summary="@string/pref_physics_collision_summ"
                android:title="@string/pref_physics_collision" />
        </PreferenceScreen>

        <!-- Time settings -->
        <PreferenceScreen
            android:summary="@string/pref_time_title_summ"
            android:title="@string/pref_time_title">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_time_show"
                android:title="@string/pref_time_show_title"
                android:summary="@string/pref_time_show_summ" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_time_24hr"
                android:title="@string/pref_time_24hr_title"
                android:summary="@string/pref_time_24hr_summ" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_time_outline"
                android:title="@string/pref_time_outline"
                android:summary="@string/pref_time_outline_summ" />
            <net.margaritov.preference.colorpicker.ColorPickerPreference
                android:defaultValue="-1"
                android:key="pref_time_color"
                android:summary="@string/pref_time_color_summ"
                android:title="@string/pref_time_color" />
            <ListPreference
                android:defaultValue="1.0"
                android:entries="@array/pref_render_size_entries"
                android:entryValues="@array/pref_render_size_entryvalues"
                android:key="pref_time_size"
                android:summary="@string/pref_time_size_summ"
                android:title="@string/pref_time_size" />
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="@string/pref_notify_summ"
            android:title="@string/pref_notify_title">

            <Preference
                android:title="@string/pref_notify_download"
                android:summary="@string/pref_notify_download_summ" >
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://play.google.com/store/apps/details?id=com.beatonma.orbitalsnotificationextension" />
            </Preference>

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_notify_pulse"
                android:summary="@string/pref_notify_pulse_summ"
                android:title="@string/pref_notify_pulse" />

            <ListPreference
                android:defaultValue="3"
                android:entries="@array/pref_notify_speed_entries"
                android:entryValues="@array/pref_notify_speed_entryvalues"
                android:key="pref_notify_speed"
                android:summary="@string/pref_notify_speed_summ"
                android:title="@string/pref_notify_speed" />

        </PreferenceScreen>

        <!-- Performance settings -->
        <PreferenceScreen
            android:summary="@string/pref_performance_title_daydream_summ"
            android:title="@string/pref_performance_title" >
            <com.beatonma.orbitalslivewallpaper.NumberDialogPreference
                android:key="pref_performance_maxobjects"
                android:summary="@string/pref_performance_maxobjects_summ"
                android:title="@string/pref_performance_maxobjects" />
            <com.beatonma.orbitalslivewallpaper.NumberDialogPreference
                android:key="pref_performance_framerate"
                android:summary="@string/pref_performance_framerate_summ"
                android:title="@string/pref_performance_framerate" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_daydream_bright"
                android:summary="@string/pref_daydream_bright_summ"
                android:title="@string/pref_daydream_bright" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_daydream_interactive"
                android:summary="@string/pref_daydream_interactive_summ"
                android:title="@string/pref_daydream_interactive" />
        </PreferenceScreen>
        <!-- Experimental settings -->
        <PreferenceScreen
            android:summary="@string/pref_experimental_summ"
            android:title="@string/pref_experimental_title">

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_experimental_centreofmass"
                android:summary="@string/pref_experimental_centreofmass_summ"
                android:title="@string/pref_experimental_centreofmass" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_experimental_pixelate"
                android:summary="@string/pref_experimental_pixelate_summ"
                android:title="@string/pref_experimental_pixelate" />
        </PreferenceScreen>
    </PreferenceCategory>

    <!-- About -->
    <PreferenceCategory
        android:summary="@string/pref_about_title_summ"
        android:title="@string/pref_about_title" >
        <com.beatonma.orbitalslivewallpaper.LicensingDialogPreference
            android:key="pref_about_licensing"
            android:title="@string/pref_about_licensing" />

        <com.beatonma.orbitalslivewallpaper.ChangelogDialogPreference
            android:key="pref_about_changelog"
            android:title="@string/pref_about_changelog" />

        <Preference
            android:title="@string/pref_about_community"
            android:summary="@string/pref_about_community_summ" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/u/0/communities/113955537219140914914" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>