<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" >

    <PreferenceCategory android:title="@string/pref_title" >
        <PreferenceScreen
            android:summary="@string/pref_appearance_title_summ"
            android:title="@string/pref_appearance_title" >
            <PreferenceCategory android:title="@string/pref_color_title" >
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    android:defaultValue="0"
                    android:key="pref_color_background"
                    android:summary="@string/pref_color_background_summ"
                    android:title="@string/pref_color_background" />

                <ListPreference
                    android:entries="@array/pref_color_color_entries"
                    android:entryValues="@array/pref_color_color_entryvalues"
                    android:defaultValue="0"
                    android:key="pref_color_colortheme"
                    android:summary="@string/pref_color_colortheme_summ"
                    android:title="@string/pref_color_colortheme" />

                <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                    android:key="pref_color_alpha"
                    android:summary="@string/pref_color_alpha_summ"
                    android:title="@string/pref_color_alpha" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_color_dark"
                    android:summary="@string/pref_color_dark_summ"
                    android:title="@string/pref_color_dark" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_color_desaturate"
                    android:summary="@string/pref_color_desaturate_summ"
                    android:title="@string/pref_color_desaturate" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_appearance_shapes_title" >
                <ListPreference
                    android:defaultValue="1.0"
                    android:entries="@array/pref_render_size_entries"
                    android:entryValues="@array/pref_render_size_entryvalues"
                    android:key="pref_render_size"
                    android:summary="@string/pref_render_size_summ"
                    android:title="@string/pref_render_size" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_render_wireframe"
                    android:summary="@string/pref_render_wireframe_summ"
                    android:title="@string/pref_render_wireframe" />

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_render_outlines"
                    android:summary="@string/pref_render_outlines_summ"
                    android:title="@string/pref_render_outlines" />

                <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                    android:key="pref_render_wireframewidth"
                    android:summary="@string/pref_render_wireframewidth_summ"
                    android:title="@string/pref_render_wireframewidth" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/pref_lockscreen_title_summ"
            android:title="@string/pref_lockscreen_title" >
            <PreferenceCategory android:title="@string/pref_color_title" >
                <net.margaritov.preference.colorpicker.ColorPickerPreference
                    android:defaultValue="0"
                    android:key="pref_lockscreen_color_background"
                    android:summary="@string/pref_lockscreen_color_background_summ"
                    android:title="@string/pref_lockscreen_color_background" />

                <ListPreference
                    android:entries="@array/pref_color_color_entries"
                    android:entryValues="@array/pref_color_color_entryvalues"
                    android:defaultValue="0"
                    android:key="pref_lockscreen_color_colortheme"
                    android:summary="@string/pref_lockscreen_color_colortheme_summ"
                    android:title="@string/pref_lockscreen_color_colortheme" />

                <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                    android:key="pref_lockscreen_alpha"
                    android:summary="@string/pref_lockscreen_alpha_summ"
                    android:title="@string/pref_lockscreen_alpha" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_lockscreen_dark"
                    android:summary="@string/pref_lockscreen_dark_summ"
                    android:title="@string/pref_lockscreen_dark" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_lockscreen_desaturate"
                    android:summary="@string/pref_lockscreen_desaturate_summ"
                    android:title="@string/pref_lockscreen_desaturate" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/pref_appearance_shapes_title" >
                <ListPreference
                    android:defaultValue="1.0"
                    android:entries="@array/pref_render_size_entries"
                    android:entryValues="@array/pref_render_size_entryvalues"
                    android:key="pref_lockscreen_size"
                    android:summary="@string/pref_lockscreen_size_summ"
                    android:title="@string/pref_lockscreen_size" />

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="pref_lockscreen_wireframe"
                    android:summary="@string/pref_lockscreen_wireframe_summ"
                    android:title="@string/pref_lockscreen_wireframe" />

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="pref_lockscreen_outlines"
                    android:summary="@string/pref_lockscreen_outlines_summ"
                    android:title="@string/pref_lockscreen_outlines" />

                <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                    android:key="pref_lockscreen_wireframewidth"
                    android:summary="@string/pref_lockscreen_wireframewidth_summ"
                    android:title="@string/pref_lockscreen_wireframewidth" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/pref_render_title_summ"
            android:title="@string/pref_render_title" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_render_accArrows"
                android:summary="@string/pref_render_accArrows_summ"
                android:title="@string/pref_render_accArrows" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_render_trace"
                android:summary="@string/pref_render_trace_summ"
                android:title="@string/pref_render_trace" />

            <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                android:dependency="pref_render_trace"
                android:key="pref_render_dialog_trace_length"
                android:summary="@string/pref_render_dialog_trace_length_summ"
                android:title="@string/pref_render_dialog_trace_length" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/pref_systems_title_summ"
            android:title="@string/pref_systems_title" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_cell"
                android:summary="@string/pref_systems_cell_summ"
                android:title="@string/pref_systems_cell" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_star"
                android:summary="@string/pref_systems_star_summ"
                android:title="@string/pref_systems_star" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_poly"
                android:summary="@string/pref_systems_poly_summ"
                android:title="@string/pref_systems_poly" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_systems_random"
                android:summary="@string/pref_systems_random_summ"
                android:title="@string/pref_systems_random" />

            <ListPreference
                android:defaultValue="3"
                android:entries="@array/pref_systems_touch_entries"
                android:entryValues="@array/pref_systems_touch_entryvalues"
                android:key="pref_systems_touch"
                android:summary="@string/pref_systems_touch_summ"
                android:title="@string/pref_systems_touch" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/pref_physics_title_summ"
            android:title="@string/pref_physics_title" >
            <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                android:key="pref_physics_gravity"
                android:summary="@string/pref_physics_gravity_summ"
                android:title="@string/pref_physics_gravity" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_physics_antigravity"
                android:summary="@string/pref_physics_antigravity_summ"
                android:title="@string/pref_physics_antigravity" />

            <ListPreference
                android:defaultValue="1"
                android:entries="@array/pref_physics_collision_entries"
                android:entryValues="@array/pref_physics_collision_entryvalues"
                android:key="pref_physics_collision"
                android:summary="@string/pref_physics_collision_summ"
                android:title="@string/pref_physics_collision" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/pref_performance_title_summ"
            android:title="@string/pref_performance_title" >
            <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                android:key="pref_performance_maxobjects"
                android:summary="@string/pref_performance_maxobjects_summ"
                android:title="@string/pref_performance_maxobjects" />
            <org.beatonma.orbitalslivewallpaper.old.NumberDialogPreference
                android:key="pref_performance_framerate"
                android:summary="@string/pref_performance_framerate_summ"
                android:title="@string/pref_performance_framerate" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/pref_about_title_summ"
        android:title="@string/pref_about_title" >
        <org.beatonma.orbitalslivewallpaper.old.LicensingDialogPreference
            android:key="pref_about_licensing"
            android:title="@string/pref_about_licensing" />
        
        <org.beatonma.orbitalslivewallpaper.old.ChangelogDialogPreference
            android:key="pref_about_changelog"
            android:title="@string/pref_about_changelog" />
        
        <Preference
            android:title="@string/pref_about_community"
            android:summary="@string/pref_about_community_summ" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/u/0/communities/113955537219140914914" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
