<?xml version="1.0" encoding="utf-8"?>
<!-- Performance settings -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:summary="@string/pref_performance_title_daydream_summ"
	android:title="@string/pref_performance_title" >
	<com.beatonma.orbitalslivewallpaper.NiceNumberDialogPreference
		android:key="pref_performance_maxobjects"
		android:summary="@string/pref_performance_maxobjects_summ"
		android:title="@string/pref_performance_maxobjects" />
	<com.beatonma.orbitalslivewallpaper.NiceNumberDialogPreference
		android:key="pref_performance_framerate"
		android:summary="@string/pref_performance_framerate_summ"
		android:title="@string/pref_performance_framerate" />
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="pref_daydream_bright"
		android:summary="@string/pref_daydream_bright_summ"
		android:title="@string/pref_daydream_bright" />
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="pref_daydream_interactive"
		android:summary="@string/pref_daydream_interactive_summ"
		android:title="@string/pref_daydream_interactive" />
</PreferenceScreen>